media/mediamanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediamanager-svc
  namespace: media
  labels:
    app: mediamanager
spec:
  selector:
    app: mediamanager
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
