media/mediamanager/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mediamanager-ingressroute
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mediamanager.macbytes.io`)
      kind: Rule
      services:
        - name: mediamanager-svc
          port: 8000
  tls:
    secretName: mediamanager-tls-certificate
